# p6xer-mcp-server

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  manifest.json  mcp.json  pyproject.toml  server.json  server.py  smithery.yaml  test_server.py
.github/workflows/: publish-to-pypi.yml
src/p6xer_mcp_server/: __init__.py  server.py
