[project]
name = "p6xer-mcp-server"
version = "0.1.3"
description = "MCP server for Primavera P6 XER schedule files — parse, analyze, and quality-check with AI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [{ name = "Osama Ata" }]
keywords = ["mcp", "primavera", "p6", "xer", "project-management", "scheduling", "construction"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development",
]
dependencies = ["mcp[cli]>=1.6.0,<2.0.0", "pyp6xer>=1.16.0"]

[project.urls]
Homepage = "https://github.com/osama-ata/p6xer-mcp-server"
Repository = "https://github.com/osama-ata/p6xer-mcp-server"
Documentation = "https://github.com/osama-ata/p6xer-mcp-server#readme"
Issues = "https://github.com/osama-ata/p6xer-mcp-server/issues"

[project.scripts]
p6xer-mcp-server = "p6xer_mcp_server.server:run"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/p6xer_mcp_server"]

[dependency-groups]
dev = [
  "build>=1.2.2",
    "twine>=6.2.0",
]
